Tried to fix the padding part on mobile again

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -54,7 +54,7 @@ nav .account{
     justify-content: flex-end;
 }
 nav .account button{
-    padding:  10px 20px 10px 20px;
+    padding:  10px 30px 10px 30px;
     margin: 5px;
     border-radius: 30px;
     border: none;
